--- a/package.json
+++ b/package.json
@@ -11,18 +11,25 @@
   "dependencies": {
     "axios": "^1.7.5",
     "express": "^4.19.2",
-    "next": "14.2.7",
-    "react": "^18",
-    "react-dom": "^18"
+    "express-session": "^1.18.0",
+    "groq-sdk": "^0.6.1",
+    "next": "^14.2.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@tailwindcss/forms": "^0.5.8",
+    "@testing-library/react": "^16.0.1",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.16.2",
+    "@types/react": "^18.3.5",
     "@types/react-dom": "^18",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.2.7",
+    "jest": "^29.7.0",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.5.4"
   }
 }
